Page MenuHome GnuPG

gpgv2 generates Libgcrypt warning: missing initialization
Closed, ResolvedPublic

Description

I'm not sure this is still happening, but looking at the code it doesn't look
like gcry_check_version is being called in gpgv2.

From http://bugs.debian.org/613465:

Running gpgv2 to verify signatures generates a warning in syslog,

gpgv2: Libgcrypt warning: missing initialization - please fix the
application

Verification still works correctly, but the warning is generated every time
gpgv2 tries to carry out an operation.

Details

Version
2.0.18

Event Timeline

This bug is still there in 2.0.20.
It would be better to add following line in main of gpgv.c.

gcry_control (GCRYCTL_INITIALIZATION_FINISHED, NULL);

Well, gcry_check_version is not called at all. The fix will go into 2.0.21 to
be released today.

werner claimed this task.
werner removed a project: In Progress.